--- a/UIKitCoordinator/Resources/Info.plist
+++ b/UIKitCoordinator/Resources/Info.plist
@@ -4,8 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Poppins-Regular.ttf</string>
-		<string>Poppins-Black</string>
+		<string>OpenSans-SemiBoldItalic.tff</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
